# telegram-skills

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  install.sh  system_prompt.txt
examples/01-vip-media-bot/: .env.example  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
examples/01-vip-media-bot/app/: __main__.py
examples/01-vip-media-bot/app/bot/: dispatcher.py  lifespan.py
examples/01-vip-media-bot/app/config/: logging.py  settings.py
examples/01-vip-media-bot/app/db/: engine.py
examples/01-vip-media-bot/app/filters/: admin.py
examples/01-vip-media-bot/app/handlers/: __init__.py  admin.py  common.py  errors.py  payment.py  subscription.py
examples/01-vip-media-bot/app/middlewares/: auth.py  db_session.py  throttling.py
examples/01-vip-media-bot/app/models/: payment.py  subscription.py  user.py
examples/01-vip-media-bot/app/repositories/: payment_repo.py  subscription_repo.py  user_repo.py
examples/01-vip-media-bot/app/services/: channel_check_service.py  payment_service.py  subscription_service.py  user_service.py
examples/01-vip-media-bot/docker/: Dockerfile  entrypoint.sh
examples/01-vip-media-bot/docs/: DEPLOY.md
examples/01-vip-media-bot/migrations/: env.py
examples/01-vip-media-bot/migrations/versions/: 20260420_0001_init.py
examples/01-vip-media-bot/tests/: conftest.py
examples/01-vip-media-bot/tests/integration/: test_repo_integration.py
examples/01-vip-media-bot/tests/unit/: test_user_service.py  (+3 more)
(+125 files in other folders)
