[project]
name = "vip-media-bot"
version = "0.1.0"
description = "BotForge example: VIP media bot with Telegram Stars"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.10",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "redis>=5.0",
  "pydantic-settings>=2.2",
  "structlog>=24.1",
  "httpx>=0.27",
  "tenacity>=8.2",
  "aiohttp>=3.9",
  "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "aiosqlite>=0.20",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "ASYNC", "RUF"]
ignore = ["S101"]  # asserts in tests

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
